--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog || P Hero Tube</title>
+    <link rel="shortcut icon" href="./image/play.png" type="image/x-icon" />
     <!-- DaisyUI and Tailwind link here -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css"
@@ -53,7 +54,45 @@
     </header>
     <main class="container mx-auto">
       <!-- Questions and Answer container  -->
-      <section class="w-4/5 mx-auto mt-2 bg-gray-200 min-h-[780px]"></section>
+      <section
+        class="w-4/5 mx-auto mt-2 py-10 px-[5%] bg-gray-100 min-h-[780px]"
+      >
+        <br /><br /><br />
+        <h3 class="text-2xl">
+          1. Blog Questions Discuss the scope of var, let, and const
+        </h3>
+        <p>
+          <b>Var: </b> var is a functional scope variable. if we use var without
+          function than we can access var from any were like global or block
+          scope
+        </p>
+        <p>
+          <b>Let: </b> let is a block scope variable. if we use let on globally
+          than we can access from any were like function or block scope. and if
+          we use let in function or block scope we cant access the let out side
+          of function or block scope.
+        </p>
+        <p><b>Const: </b> const is a block scop like let.</p>
+        <br /><br /><br />
+        <h3 class="text-2xl">2. Tell us the use cases of null and undefined</h3>
+        <p>
+          <b>Undefined:</b> when we declare variable without initialized than we
+          use undefined. and if we want to access any not existing property than
+          use <b>Undefined</b>
+        </p>
+        <p>
+          <b>Null:</b> when we want indicate a variable they have no
+          meaningfully value or property. and when we want to remove reference
+          to an object or others element.
+        </p>
+        <br /><br /><br />
+        <h3 class="text-2xl">3. What do you mean by REST API?</h3>
+        <p>
+          We know this that REST API mean Representational State Transfer
+          Application Programming Interface.
+        </p>
+        <br /><br /><br />
+      </section>
     </main>
     <!---------- script here ----------->
     <script>
