--- a/blog.html
+++ b/blog.html
@@ -54,42 +54,44 @@
     </header>
     <main class="container mx-auto">
       <!-- Questions and Answer container  -->
-      <section
-        class="w-4/5 mx-auto mt-2 py-10 px-[5%] bg-gray-100 min-h-[780px]"
-      >
+      <section class="w-4/5 mx-auto mt-2 px-[5%] bg-gray-100 min-h-[780px]">
         <br /><br /><br />
-        <h3 class="text-2xl">
-          1. Blog Questions Discuss the scope of var, let, and const
-        </h3>
-        <p>
-          <b>Var: </b> var is a functional scope variable. if we use var without
-          function than we can access var from any were like global or block
-          scope
+        <h2 class="text-center text-4xl mb-4">Blog Questions</h2>
+        <h3 class="text-3xl">1. Discuss the scope of var, let, and const</h3>
+        <p class="text-xl mt-1 text-justify">
+          <b>Var: </b> var is a functional scope. if we use var without function
+          than we can access var from any where.
         </p>
-        <p>
+        <p class="text-xl mt-1">
           <b>Let: </b> let is a block scope variable. if we use let on globally
-          than we can access from any were like function or block scope. and if
-          we use let in function or block scope we cant access the let out side
-          of function or block scope.
+          than we can access from any where . and if we use let in function or
+          block scope we cant access the let out side of function or block
+          scope.
         </p>
-        <p><b>Const: </b> const is a block scop like let.</p>
+        <p class="text-xl mt-1">
+          <b>Const: </b> const is a block scop like let. but if we use const
+          than we can not reassign the value of const .
+        </p>
         <br /><br /><br />
-        <h3 class="text-2xl">2. Tell us the use cases of null and undefined</h3>
-        <p>
+        <h3 class="text-3xl">2. Tell us the use cases of null and undefined</h3>
+        <p class="text-xl mt-1">
           <b>Undefined:</b> when we declare variable without initialized than we
           use undefined. and if we want to access any not existing property than
-          use <b>Undefined</b>
+          use Undefined.
         </p>
-        <p>
+        <p class="text-xl mt-1">
           <b>Null:</b> when we want indicate a variable they have no
           meaningfully value or property. and when we want to remove reference
           to an object or others element.
         </p>
         <br /><br /><br />
-        <h3 class="text-2xl">3. What do you mean by REST API?</h3>
-        <p>
+        <h3 class="text-3xl">3. What do you mean by REST API?</h3>
+        <p class="text-xl mt-1">
           We know this that REST API mean Representational State Transfer
-          Application Programming Interface.
+          Application Programming Interface. when we need to connect clint to
+          server then we need something like messenger to connect the server.
+          when we will hit the end point of an api we get the data as json
+          format
         </p>
         <br /><br /><br />
       </section>
