--- a/blog.html
+++ b/blog.html
@@ -35,11 +35,7 @@
             </div>
           </div>
           <div class="navbar-center">
-            <a
-              onclick="goHome()"
-              class="btn btn-ghost normal-case text-xl font-bold"
-              >Home</a
-            >
+            <a class="btn btn-ghost normal-case text-xl font-bold">Home</a>
           </div>
           <div class="navbar-end">
             <button
@@ -97,10 +93,5 @@
       </section>
     </main>
     <!---------- script here ----------->
-    <script>
-      const goHome = () => {
-        window.location.href = "http://127.0.0.1:5500/index.html";
-      };
-    </script>
   </body>
 </html>
