--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               onclick="(readBlog())"
               class="py-3 px-5 rounded-xl text-lg text-white font-medium hover:bg-[#e5e7eb] bg-[#FF1F3D]"
             >
-              Blog
+              <a href="http://127.0.0.1:5500/blog.html">Blog</a>
             </button>
           </div>
         </div>
